2003-07-06  olicha  <olivier.chapuis@free.fr>

	* libs/FRender.c (FRenderRender):
	Fixed compilation

2003-07-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/ewmh.c (ewmh_check_wm_pid):
	(EWMH_WindowInit):
	detect whether a window has _NET_WM_PID set; use that to detect ICCCM
	compliant ConfigureNotify handling

2003-07-05  Marcus Lundblad  <ml@update.uu.se>

	* libs/Flocale.c (FlocaleDrawUnderline):
	Commented out some non-working new code

2003-07-05  Marcus Lundblad  <ml@update.uu.se>

	* libs/Flocale.c (FlocaleDrawString):
	fixed drawing superimposed characters with a fontset

2003-07-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (__cr_detect_icccm_move):
	(__handle_cr_on_client):
	(__cr_get_grav_position):
	(__cr_get_static_position):
	* fvwm/window_flags.h:
	* fvwm/fvwm.h:
	try to autodetect whether application uses the icccm way of moving
	windows of the traditional way always using static gravity

	* acconfig.h:
	moved SIGNAL_RETURN macro definition to acconfig.h

	* fvwm/module_interface.c (DeadPipe):
	* fvwm/fvwm.c (SigDone):
	(Restart):
	(ReapChildren):
	use SIGNAL_RETURN macro

	* fvwm/events.c (__handle_cr_on_client):
	(__merge_cr_moveresize):
	(__cr_detect_icccm_move):

	* fvwm/events.c (__handle_cr_on_unmanaged):
	(__handle_cr_on_icon):
	(__handle_cr_on_shaped):
	(__handle_cr_restack):
	(__handle_cr_on_client):
	(HandleConfigureRequest):
	split the ConfigureRequest code into multiple functions

	* fvwm/update.c (apply_window_updates):
	fixed drawing of window decorations when "Style * Neverfocus" is used

	* fvwm/events.c (HandleKeyPress):
	fixed a bug with key binding contexts

	* fvwm/functions.c (__execute_function):
	* fvwm/expand.c (expand_vars):
	(expand_vars_extended):
	new extended variable $[func.context]

	* libs/Bindings.h:
	* libs/Bindings.c:
	moved some code to the new files

	* libs/charmap.h:
	* libs/charmap.c:
	* libs/modifiers.h:
	* libs/modifiers.c:
	* libs/wcontext.c:
	* libs/wcontext.h:
	new files

	* libs/Bindings.c: