@@ -26,7 +26,7 @@
 
 #if HAVE_BIDI
 
-#include "FBidiJoin.h"
+#include "BidiJoin.h"
 #include <fribidi/fribidi.h>
 #include <fribidi/fribidi_types.h>
 #include "safemalloc.h"
